# jr

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPER.md  README.md  dist-workspace.toml  rustfmt.toml
src/: app.rs  clients.rs  commands.rs  commit.rs  config.rs  diff_utils.rs  git.rs  github.rs  jujutsu.rs  lib.rs  main.rs  ops.rs  stack.rs
src/clients/: git.rs  github.rs  github_curl.rs  jujutsu.rs
src/commands/: create.rs  init.rs  restack.rs  status.rs  update.rs
src/ops/: git.rs  github.rs  github_curl.rs  jujutsu.rs
tests/: .integration.rs.pending-snap  integration.rs  macros.rs  utils.rs
