[package]
name = "jr"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter"] }

[dev-dependencies]
ctor = "0.2"
insta = { version = "1.44", features = ["filters"] }
log = "0.4"
mockall = "0.13"
serial_test = "3.2"
tempfile = "3.0"
