[package]
name = "jr"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/jnb/jr"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "process", "rt-multi-thread", "fs"] }
tracing = "0.1"

[dev-dependencies]
ctor = "0.2"
insta = { version = "1.44", features = ["filters"] }
log = "0.4"
mockall = "0.13"
serde_yml = "0.0.12"
tempfile = "3.0"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
